--- a/index.html
+++ b/index.html
@@ -244,109 +244,113 @@
   </section>
 
   <!-- Sponsors Section -->
- <section class="sponsors-section">
+ <!-- Sponsors Section Heading (shared for both views) -->
+<section class="sponsors-section">
   <h2 class="section-heading">
-  <span class="white-text">Our</span> <span class="pink-text">Sponsors &amp; Partners</span>
-</h2>
-<div class="sponsor-columns-container">
-  <!-- Left Column -->
-  <div class="sponsor-column left-column">
-    <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
-      <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
-    </div>
-  </div>
+    <span class="white-text">Our</span> <span class="pink-text">Sponsors &amp; Partners</span>
+  </h2>
+</section>
 
-  <!-- Middle Column -->
-  <div class="sponsor-column middle-column">
-    <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
-      <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
+<!-- Desktop Sponsors Section -->
+<section class="sponsors-section desktop-only">
+  <div class="sponsor-columns-container desktop">
+    <!-- Left Column -->
+    <div class="sponsor-column left-column">
+      <div class="sponsor-column-inner">
+        <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 5"></div>
+        <!-- duplicate for seamless scroll -->
+        <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 5"></div>
+      </div>
     </div>
-  </div>
 
-  <!-- Right Column -->
-  <div class="sponsor-column right-column">
-    <div class="sponsor-column-inner">
-      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 8"></div>
-     
-      <!-- duplicate for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 9"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 6"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 8"></div>
-      
+    <!-- Middle Column -->
+    <div class="sponsor-column middle-column">
+      <div class="sponsor-column-inner">
+        <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 6"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 7"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 8"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 9"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 10"></div>
+        <!-- duplicate for seamless scroll -->
+        <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 6"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 7"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 8"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 9"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 10"></div>
+      </div>
+    </div>
+
+    <!-- Right Column -->
+    <div class="sponsor-column right-column">
+      <div class="sponsor-column-inner">
+        <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 11"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 12"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 13"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 14"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 15"></div>
+        <!-- duplicate for seamless scroll -->
+        <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 11"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 12"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 13"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 14"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 15"></div>
+      </div>
     </div>
   </div>
-</div>
+</section>
 
 <!-- Mobile Sponsors Section -->
 <section class="sponsors-section mobile-only">
-
   <div class="mobile-sponsor-rows">
-   <!-- Row 1 -->
-  <div class="mobile-row row1">
-    <div class="mobile-row-inner">
-      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
-      <!-- Repeat for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+    <!-- Row 1 -->
+    <div class="mobile-row row1">
+      <div class="mobile-row-inner">
+        <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+        <!-- Repeat for seamless scroll -->
+        <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 1"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 2"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/ECell NSUT.png" alt="Sponsor 3"></div>
+      </div>
     </div>
-  </div>
 
-  <!-- Row 2 -->
-  <div class="mobile-row row2">
-    <div class="mobile-row-inner">
-      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 6"></div>
-      <!-- Repeat for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 5"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 6"></div>
+    <!-- Row 2 -->
+    <div class="mobile-row row2">
+      <div class="mobile-row-inner">
+        <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 5"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 6"></div>
+        <!-- Repeat for seamless scroll -->
+        <div class="sponsor-logo"><img src="images/sponsors/kmc.png" alt="Sponsor 4"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/madeeasy.png" alt="Sponsor 5"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/sibilize.png" alt="Sponsor 6"></div>
+      </div>
     </div>
-  </div>
 
-  <!-- Row 3 -->
-  <div class="mobile-row row3">
-    <div class="mobile-row-inner">
-      <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 8"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 9"></div>
-      <!-- Repeat for seamless scroll -->
-      <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 7"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 8"></div>
-      <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 9"></div>
+    <!-- Row 3 -->
+    <div class="mobile-row row3">
+      <div class="mobile-row-inner">
+        <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 7"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 8"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 9"></div>
+        <!-- Repeat for seamless scroll -->
+        <div class="sponsor-logo"><img src="images/sponsors/unstop.png" alt="Sponsor 7"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/codegeeks.png" alt="Sponsor 8"></div>
+        <div class="sponsor-logo"><img src="images/sponsors/drishtiias.png" alt="Sponsor 9"></div>
+      </div>
     </div>
-  </div>
   </div>
 </section>
+
 
 
 
