--- a/our-team.html
+++ b/our-team.html
@@ -388,7 +388,7 @@ nav a, .role, .name {
       { name: "Manya Gupta", role: "Content Lead", img: "team-photos/MANYA-GUPTA.png", linkedin: "https://www.linkedin.com/in/manya-gupta-02ab63288?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
       { name: "Enakshi Pardhe", role: "Sponsorship Lead", img: "team-photos/ENAKSHI PARDHE.png", linkedin: "https://www.linkedin.com/company/ecelligdtuw/posts/?feedView=all" },
       { name: "Keva Mirg", role: "R&D Lead", img: "team-photos/KEVA MIRG.png", linkedin: "https://www.linkedin.com/in/keva-mirg-1b6401290/?originalSubdomain=in" },
-      { name: "Sejal", role: "Marketing Lead", img: "team-photos/SEJAL.png", linkedin: "https://www.linkedin.com/company/ecelligdtuw/posts/?feedView=all" },
+      { name: "Sejal", role: "Marketing Lead", img: "team-photos/SEJAL.png", linkedin: "https://www.linkedin.com/in/sejal-pal-200b6b292?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" },
       // add more if needed
     ];
 
