--- a/updates.html
+++ b/updates.html
@@ -496,11 +496,11 @@
       <div class="timeline-item left">
         <div class="timeline-marker"></div>
         <div class="timeline-item-content">
-          <span class="timeline-date">Coming Soon</span>
+          <span class="timeline-date">23 Sep 2025</span>
           <h2 class="timeline-title">Farewell</h2>
           <p>A heartfelt goodbye to our graduating members.</p>
-          <a href="#" 
-   onclick="showComingSoon(event)" 
+          <a href="https://www.instagram.com/stories/highlights/17956989758851317/" 
+   
    class="read-more">
    Read More
 </a>
