--- a/events.html
+++ b/events.html
@@ -466,6 +466,14 @@
           <p>Exploring Research Opportunities with Arufa</p>
         </div>
       </div>
+      <!-- Event 11 -->
+<div class="event-card" onclick="openModal('modal-leadership')">
+  <img src="images/events/leadership/1.png" class="event-thumb" alt="Unlocking Leadership Event">
+  <div class="event-info">
+    <h2>Unlocking Leadership </h2>
+    <p>Student to CFO with Manish Bahuguna</p>
+  </div>
+</div>
 
 
     </div>
@@ -974,6 +982,41 @@
 
     </div>
   </div>
+  <!-- Unlocking Leadership Modal -->
+<div id="modal-leadership" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closeModal('modal-leadership')">&times;</span>
+    <h2>Unlocking Leadership</h2>
+    <div class="modal-images">
+     
+      <img src="images/events/leadership/5.jpg" alt="Unlocking Leadership Image 2">
+      <img src="images/events/leadership/2 (1).JPG" alt="Unlocking Leadership">
+      <img src="images/events/leadership/4.jpg" alt="Unlocking Leadership Image 3">
+    </div>
+    <p>
+      💼 <strong>Unlocking the Journey from Student to CFO with Manish Bahuguna!</strong> 🌟  
+      This special session brought an inspiring perspective from the Vice President at Barclays GSC, guiding students on how to navigate their careers with vision and purpose. ✨
+    </p>
+    <p>
+      Students gained exclusive insights into the realities of corporate leadership and the mindset required to grow from campus to the C-Suite.  
+      The session encouraged participants to dream big, develop leadership skills, and pursue their goals with confidence. 🚀
+    </p>
+    <p>
+      Key takeaways from the event included:<br>
+      🔹 <strong>Career Growth:</strong> Practical advice on moving from student life to leadership roles. <br>
+      🔹 <strong>Leadership Insights:</strong> Learning from real experiences in the financial sector. <br>
+      🔹 <strong>Purpose & Vision:</strong> Building a career that goes beyond titles, towards meaningful impact.  
+    </p>
+    <p>
+      📅 <strong>Date:</strong> 29th September <br>
+      🕐 <strong>Time:</strong> 1–3 PM <br>
+      📍 <strong>Venue:</strong> Auditorium
+    </p>
+    <p>
+      ✅ A big thank you to all attendees for making this leadership journey memorable!
+    </p>
+  </div>
+</div>
 
   
 
