--- a/blogs.html
+++ b/blogs.html
@@ -93,7 +93,7 @@
   </style>
 </head>
 
-<body class="bg-gray-900">
+<body >
   <div id="root">
     <!-- Navbar -->
     <header role="banner" class="sticky top-0 z-50">
@@ -228,12 +228,12 @@
         </div>
         <div>
           <h3 class="text-lg font-semibold mb-4 text-gray-300">Follow Us</h3>
-          <div class="flex space-x-4 mb-4 text-xl">
+          <!-- <div class="flex space-x-4 mb-4 text-xl">
             <a href="#" class="hover:text-pink-400"><i class="fab fa-linkedin-in"></i></a>
             <a href="#" class="hover:text-pink-400"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="hover:text-pink-400"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/ecell.igdtuw/" class="hover:text-pink-400"><i class="fab fa-instagram"></i></a>
             <a href="#" class="hover:text-pink-400"><i class="fab fa-twitter"></i></a>
-          </div>
+          </div> -->
           <div class="mt-4">
             <a href="https://www.instagram.com/ecell.igdtuw/" class="hover:text-pink-400 transition">Instagram</a>
             <p class="mt-2">+919810823235</p>
