updated slideshow,events, and gallery

--- a/index.html
+++ b/index.html
@@ -231,17 +231,19 @@
 
 
 
-  <!-- Team Photo Section -->
-  <section id="team" class="relative">
-    <div class="team-image-container">
-      <img src="ecell_team.jpg"
-        onerror="this.onerror=null; this.src='https://placehold.co/1200x800/222/FFF?text=Team+Photo';"
-        alt="E-Cell IGDTUW Team" class="team-image-color">
-      <img src="ecell_team.jpg"
-        onerror="this.onerror=null; this.src='https://placehold.co/1200x800/222/FFF?text=Team+Photo+BW';"
-        alt="E-Cell IGDTUW Team Black & White" class="team-image-bw">
-    </div>
-  </section>
+<!-- Team Photo Section -->
+<section id="team">
+  <div class="team-slideshow" id="teamSlideshow">
+    <div class="team-slide active"><img src="images/ecell_team01.JPG" alt="..."></div>
+    <div class="team-slide"><img src="ecell_team.jpg" alt="..."></div>
+    <div class="team-slide"><img src="images/ecell_team02.JPG" alt="..."></div>
+    <div class="sl-nav left" id="prevBtn">&#10094;</div>
+    <div class="sl-nav right" id="nextBtn">&#10095;</div>
+    <div class="sl-dots" id="dotsContainer"></div>
+  </div>
+</section>
+
+
 
   <!-- Sponsors Section -->
  <!-- Sponsors Section Heading (shared for both views) -->
