new event added

--- a/events.html
+++ b/events.html
@@ -373,6 +373,16 @@
     <h1>Our Events</h1>
     <div class="events-grid">
 
+<!-- New Upcoming event -->
+       <div class="event-card" onclick="openModal('modal-bitcoin')">
+  <img src="images/events/bitcoinevent.jpg" class="event-thumb" alt="Bitcoin Bharat Tour Event">
+  <div class="event-info">
+    <h2>Bitcoin Bharat Tour</h2>
+    <p>Hands-on Bitcoin & Blockchain Session at IGDTUW</p>
+  </div>
+</div>
+
+
       <!-- Event 1 -->
        <div class="event-card" onclick="openModal('modal-leadership')">
   <img src="images/events/leadership/1.png" class="event-thumb" alt="Unlocking Leadership Event">
@@ -481,6 +491,43 @@
 
 
   <!-- Modals (unchanged) -->
+
+  <!-- new upcoming event -->
+
+  <!-- Bitcoin Bharat Tour Modal -->
+<div id="modal-bitcoin" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" onclick="closeModal('modal-bitcoin')">&times;</span>
+
+    <div id="bitcoin" class="marquee-section"></div>
+
+    <h2>Bitcoin Bharat Tour</h2>
+
+    <!-- <div class="modal-images">
+      <img src="images/events/bitcoin-bharat/1.png" alt="">
+      <img src="images/events/bitcoin-bharat/2.png" alt="">
+      <img src="images/events/bitcoin-bharat/3.png" alt="">
+    </div> -->
+
+    <p>
+      <strong>Bitcoin Bharat Tour</strong> ~<br>
+      The Entrepreneurship Cell of IGDTUW proudly hosted the <strong>Bitcoin Bharat Tour</strong>, a nationwide movement led by <strong>SwapSo</strong> — an IIT Bombay–backed startup supported by SINE IIT Bombay, Microsoft for Startups, and Startup India.<br><br>
+
+      This hands-on session introduced students to the fundamentals of <strong>Bitcoin</strong> and real-world <strong>blockchain applications</strong>, while highlighting emerging opportunities in <strong>FinTech, Web3,</strong> and open-source technology.<br><br>
+
+      Participants engaged directly with innovators and startup mentors, gaining insights into the evolving world of decentralized finance. The session concluded with certificates and participation goodies for attendees.<br><br>
+
+      <strong>Event Details:</strong><br>
+      ▪ Date: <strong>21st November</strong><br>
+      ▪ Time: <strong>12:00 PM – 2:30 PM</strong><br>
+      ▪ Venue: <strong>IGDTUW Auditorium</strong><br><br>
+
+      A transformative experience for students eager to understand how Bitcoin and Blockchain are reshaping the future of global finance.
+    </p>
+
+  </div>
+</div>
+
    
 
 
