bitcoin event and gallery

--- a/events.html
+++ b/events.html
@@ -373,11 +373,11 @@
     <h1>Our Events</h1>
     <div class="events-grid">
 
-<!-- New Upcoming event -->
+<!-- Bitcoin event -->
        <div class="event-card" onclick="openModal('modal-bitcoin')">
   <img src="images/events/bitcoinevent.jpg" class="event-thumb" alt="Bitcoin Bharat Tour Event">
   <div class="event-info">
-    <h2>Bitcoin Bharat Tour</h2>
+    <h2>Bitcoin India Tour</h2>
     <p>Hands-on Bitcoin & Blockchain Session at IGDTUW</p>
   </div>
 </div>
@@ -501,17 +501,17 @@
 
     <div id="bitcoin" class="marquee-section"></div>
 
-    <h2>Bitcoin Bharat Tour</h2>
+    <h2>Bitcoin India Tour</h2>
 
-    <!-- <div class="modal-images">
-      <img src="images/events/bitcoin-bharat/1.png" alt="">
-      <img src="images/events/bitcoin-bharat/2.png" alt="">
-      <img src="images/events/bitcoin-bharat/3.png" alt="">
-    </div> -->
+    <div class="modal-images">
+      <img src="images/IMG_2723.JPG" alt="">
+      <img src="images/IMG_20251121_134841888.jpg" alt="">
+      <img src="images/IMG_2724.JPG" alt="">
+    </div>
 
     <p>
-      <strong>Bitcoin Bharat Tour</strong> ~<br>
-      The Entrepreneurship Cell of IGDTUW proudly hosted the <strong>Bitcoin Bharat Tour</strong>, a nationwide movement led by <strong>SwapSo</strong> — an IIT Bombay–backed startup supported by SINE IIT Bombay, Microsoft for Startups, and Startup India.<br><br>
+      <strong>Bitcoin India Tour</strong> ~<br>
+      The Entrepreneurship Cell of IGDTUW proudly hosted the <strong>Bitcoin India Tour</strong>, a nationwide movement led by <strong>SwapSo</strong> — an IIT Bombay–backed startup supported by SINE IIT Bombay, Microsoft for Startups, and Startup India.<br><br>
 
       This hands-on session introduced students to the fundamentals of <strong>Bitcoin</strong> and real-world <strong>blockchain applications</strong>, while highlighting emerging opportunities in <strong>FinTech, Web3,</strong> and open-source technology.<br><br>
 
