--- a/gallery.html
+++ b/gallery.html
@@ -311,6 +311,7 @@
     <div class="gallery-flex">
       <!-- Left Column -->
       <div class="column left">
+        <div class="item"><img src="images/IMG_2724.JPG" alt="Gallery Image" /></div>
         <div class="item"><img src="images/events/leadership/3.JPG" alt="Gallery Image" /></div>
         <div class="item"><img src="images/gallery/gallery4.jpg" alt="Gallery Image" /></div>
         <div class="item"><img src="https://i.postimg.cc/nr12LyP3/IMG-9993.avif" alt="Gallery Image" /></div>
@@ -339,6 +340,7 @@
 
       <!-- Middle Column (Wider) -->
       <div class="column middle">
+        <div class="item"><img src="images/IMG_2723.JPG" alt="Gallery Image" /></div>
         <div class="item"><img src="https://i.postimg.cc/L63xqwxs/Scanned-20250828-1901-08.jpg" alt="Gallery Image" /></div>
         <div class="item"><img src="images/events/leadership/2 (1).JPG" alt="Gallery Image" /></div>
         <div class="item"><img src="images/events//drishtiias/1000074475.jpg" alt="Gallery Image" /></div>
@@ -367,6 +369,7 @@
 
       <!-- Right Column -->
       <div class="column right">
+        <div class="item"><img src="images/IMG_20251121_134841888.jpg" alt="Gallery Image" /></div> 
         <div class="item"><img src="images/events/leadership/5.jpg" alt="Gallery Image" /></div> 
         <div class="item"><img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="Gallery Image" /></div>
         <div class="item"><img src="images/events/ideastorm/ideastorm1.jpg" alt="Gallery Image" /></div>
