--- a/updates.html
+++ b/updates.html
@@ -500,7 +500,7 @@
         <div class="timeline-item-content">
           <span class="timeline-date">21 Nov 2025</span>
           <h2 class="timeline-title">Bitcoin Bharat Tour</h2>
-          <p>Bitcoin Bharat Tour, a nationwide movement led by SwapSo.</p>
+          <p>Bitcoin India Tour, a nationwide movement led by SwapSo.</p>
           <a href="https://www.instagram.com/p/DRAOR5oD0G0/" class="read-more">
             Read More
           </a>
