--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
         <div class="links" id="navLinks">
           <a href="index.html" class="nav-text">About</a>
+          <a href="esummit.html" class="nav-text">ESummit</a>
           <a href="events.html" class="nav-text">Events</a>
           <a href="blogs.html" class="nav-text">Blogs</a>
           <a href="gallery.html" class="nav-text">Gallery</a>
