--- a/E-Cell-Website/index.html
+++ b/E-Cell-Website/index.html
@@ -505,6 +505,55 @@
   </div>
 </footer>
     </div>
+    
+  <!-- eSummit Popup -->
+  <div id="esummitPopup"
+       class="fixed inset-0 z-[9999] hidden items-center justify-center bg-black/70 backdrop-blur-md">
+
+    <!-- Floating Glow -->
+    <div class="absolute w-[500px] h-[500px] bg-purple-600/20 blur-[120px] rounded-full animate-bounce-slow"></div>
+
+    <div id="popupCard"
+         class="relative bg-gradient-to-br from-black via-gray-900 to-purple-950 
+                text-white max-w-md w-[90%] p-8 rounded-3xl 
+                shadow-[0_0_80px_rgba(168,85,247,0.25)] 
+                border border-white/10 overflow-hidden">
+
+      <!-- Accent line -->
+      <div class="absolute top-0 left-0 w-full h-[2px] bg-gradient-to-r from-pink-500 to-purple-500"></div>
+
+      <!-- Close -->
+      <button id="closePopup" class="absolute top-4 right-4 text-gray-400 hover:text-white text-2xl transition">
+        ×
+      </button>
+
+      <!-- Popup Content -->
+      <p class="popup-sub text-xs uppercase tracking-[0.35em] text-purple-400 mb-3">
+        E-Cell IGDTUW presents
+      </p>
+
+      <h2 class="popup-title text-4xl font-extrabold mb-4 leading-tight">
+        Not a fest.<br>
+        Not a workshop.<br>
+        <span class="text-pink-400">It’s eSummit.</span>
+      </h2>
+
+      <p class="popup-desc text-gray-300 mb-8 text-sm leading-relaxed">
+        Two days of bold ideas, real stories, and founders who dared.
+        <br><span class="text-white/80">Limited seats • High impact</span>
+      </p>
+
+      <button id="enterEsummit"
+              class="group relative w-full py-4 rounded-full 
+                     bg-gradient-to-r from-pink-500 to-purple-500 
+                     font-bold text-lg transition-all duration-300 
+                     hover:scale-[1.04] hover:shadow-[0_0_30px_rgba(236,72,153,0.6)]">
+        <span class="relative z-10">Enter eSummit →</span>
+        <span class="absolute inset-0 rounded-full bg-white/10 opacity-0 group-hover:opacity-100 transition"></span>
+      </button>
+    </div>
+  </div>
+
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
