--- a/E-Cell-Website/esummit.html
+++ b/E-Cell-Website/esummit.html
@@ -243,7 +243,7 @@
         </div>
     </section>
     <!-- Competitions Section -->
-    <section id="competitions" class="competition-section">
+    <section id="competitions" class="competition-section ">
         <!-- SECTION HEADER -->
         <div class="comp-header">
             <span class="section-tag">
@@ -259,11 +259,12 @@
                 and creativity—while preparing you for the fast-evolving tech landscape.
             </p>
         </div>
-        <div class="comp-container">
+        
+        <div class="comp-container grid grid-cols-1 md:grid-cols-2 place-items-center gap-8 mt-12 flex justify-center gap-10 items-stretch">
             <a href="https://unstop.com/competitions/start-a-thon-a-two-stage-startup-pitching-competition-e-summit-igdtuw-e-cell-igdtuw-1621490?utm_source=ig&utm_medium=social&utm_content=link_in_bio"
                 target="_blank" rel="noopener noreferrer" class="comp-card-link">
 
-                <div class="comp-card">
+                <div class="comp-card flex flex-col h-full ">
                     <div class="comp-icon-circle">
                         <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
                             <path d="M20 5L25 15H15L20 5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -333,24 +334,6 @@
                 </div>
 
             </a>
-
-            <div class="comp-card">
-                <div class="comp-icon-circle">
-                    <svg width="40" height="40" viewBox="0 0 40 40" fill="none">
-                        <circle cx="20" cy="14" r="6" stroke="currentColor" stroke-width="2" />
-                        <path d="M12 30C12 25 16 22 20 22C24 22 28 25 28 30" stroke="currentColor" stroke-width="2"
-                            stroke-linecap="round" />
-                    </svg>
-                </div>
-                <h3 class="comp-title">2 Speaker Events</h3>
-                <p class="comp-desc">Powerful speaker sessions featuring founders, CEOs, and industry leaders sharing
-                    real
-                    experiences and actionable insights.</p>
-                <div class="comp-bottom">
-                    <span class="highlight-text">Expert Insights</span>
-                    <span class="arrow">→</span>
-                </div>
-            </div>
         </div>
     </section>
 
